--- a/css/heros/hero-ux-design-collection.scss
+++ b/css/heros/hero-ux-design-collection.scss
@@ -195,6 +195,6 @@
 a.gym-button-secondary:hover,
 a.gym-button-secondary:focus,
 a.gym-button-secondary:active {
-  color: $gym-white !important;
-  border: 2px solid $gym-white !important;
+  color: $gym-white;
+  border: 2px solid $gym-white;
 }
