--- a/css/heros/hero-webinar-05-2019.scss
+++ b/css/heros/hero-webinar-05-2019.scss
@@ -172,16 +172,11 @@
 }
 
 .webinar-05-2019 a.gym-button-secondary {
-  width: auto;
-  color: $gym-white !important;
-  border: 2px solid $gym-white !important;
-  padding: 1.2em 1.6em !important;
-  vertical-align: bottom;
+  border: 2px solid $gym-white;
 }
 
 a.gym-button-secondary:hover,
 a.gym-button-secondary:focus,
 a.gym-button-secondary:active {
-  color: $gym-white !important;
-  border: 2px solid $gym-white !important;
+  border: 2px solid $gym-white;
 }
