--- a/css/heros/hero-webinar-12-2018.scss
+++ b/css/heros/hero-webinar-12-2018.scss
@@ -100,18 +100,12 @@
 }
 
 .webinar-12-2018 a.gym-button-secondary {
-  width: auto;
-  color: $gym-white !important;
-  background-color: transparent !important;
-  border: 2px solid $gym-white !important;
-  padding: 1.2em 1.6em !important;
-  vertical-align: bottom;
+  border: 2px solid $gym-white;
 }
 
 a.gym-button-secondary:hover,
 a.gym-button-secondary:focus,
 a.gym-button-secondary:active {
-  color: $gym-white !important;
-  background-color: $gym-light-gray !important;
-  border: 2px solid $gym-white !important;
+  background-color: $gym-light-gray;
+  border: 2px solid $gym-white;
 }
