--- a/css/heros/hero-gym-016.scss
+++ b/css/heros/hero-gym-016.scss
@@ -119,26 +119,22 @@
 }
 
 .hero-promo a.gym-button-secondary {
-  font-size: 105%;
-  width: auto;
-  color: $gym-black !important;
-  border: 2px solid $gym-white !important;
-  padding: 1.2em 2em !important;
-  vertical-align: bottom;
+  color: $gym-black;
+  border: 2px solid $gym-white;
 }
 
 .hero-promo a.gym-button-secondary:hover,
 .hero-promo a.gym-button-secondary:focus,
 .hero-promo a.gym-button-secondary:active {
-  color: $gym-white !important;
-  border: 2px solid $gym-white !important;
+  color: $gym-white;
+  border: 2px solid $gym-white;
 }
 
 .hero-promo a.gym-button-secondary:hover {
-  background-color: #666 !important;
+  background-color: #666;
 }
 
 .hero-promo a.gym-button-secondary:focus,
 .hero-promo a.gym-button-secondary:active {
-  background-color: transparent !important;
+  background-color: transparent;
 }
