--- a/css/heros/hero-take5-campaign.scss
+++ b/css/heros/hero-take5-campaign.scss
@@ -180,9 +180,5 @@
 // !override / reset/rescale font-size adjustment
 
 .hero-promo a.gym-button-secondary {
-  font-size: 105%;
-  width: auto !important;
-  vertical-align: bottom;
-  padding: 1.2em 1.6em !important;
-  border: 2px solid $gym-white !important;
+  border: 2px solid $gym-white;
 }
