Update course tabs layout
- Add vertical spacing

--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -179,7 +179,7 @@
 
 // Course tabs (reusable class)
 .tabs {
-  padding: 0;
+  padding: 1em 0;
   font-weight: normal;
   margin: 4px 0 -8px; // offset to ensure being vertical centered above white panel
 
