Add about courses section
- Add content and styling

--- a/_sass/pages/_courses.scss
+++ b/_sass/pages/_courses.scss
@@ -4,6 +4,7 @@
 #gym-catalog {
 
   .about {
+    font-size: 16px;
     background-color: #d2d2d2;
     padding-top: 1.6em;
     padding-bottom: 1.6em;
@@ -23,6 +24,74 @@
       margin-top: 0.6em;
       margin-bottom: 0;
     }
+
+    .about-courses {
+      font-size: 16px;
+      margin-top: 1em;
+
+      summary {
+        cursor: pointer;
+      }
+
+      h2 {
+        font-size: 1.6em;
+        margin-top: -0.4rem;
+      }
+
+      .callout {
+        background-color: $gym-white;
+        padding: 1.6em 1.2em;
+        border: 1px solid $gym-gray;
+        margin-top: 1.2em;
+      }
+
+    }
+
+  }
+
+  dl {
+    color: $gym-black;
+    margin-top: 1em;
+    margin-left: 1.2em;
+    margin-bottom: 0;
+
+    div {
+      margin-top: 1em;
+    }
+
+    dt {
+      font-size: font-calc(16, rem, 10px);
+      line-height: 1.2;
+      font-family: $gym-font-stack;
+      font-weight: 900;
+      color: $gym-black;
+      letter-spacing: 0.06em;
+      word-spacing: 0.05em;
+      text-transform: uppercase;
+      margin-bottom: 0.6em;
+    }
+
+    dd {
+      display: list-item;
+      list-style: disc;
+      color: $gym-orange;
+      line-height: 1.25;
+      margin-top: 0.4em;
+
+      span {
+        font-size: font-calc(16, rem, 10px);
+        color: #222;
+      }
+    }
+
+  }
+
+  @include breakpoint(medium, max) {
+
+    .row > div:not(:first-child) {
+      margin-top: 1.6em;
+    }
+
   }
 
 }
@@ -103,39 +172,10 @@
       padding: 1.2em;
     }
 
-    dl {
-      color: $gym-black;
-      letter-spacing: 0.06em;
-      word-spacing: 0.05em;
-      margin-bottom: 0.6em;
-      margin-left: 1.2em;
-      margin-top: 1em;
-    }
-    dt {
-      font-size: font-calc(16, rem, 10px);
-      line-height: 1.2;
-      font-family: $gym-font-stack;
-      font-weight: 900;
-      color: $gym-black;
-      letter-spacing: 0.06em;
-      word-spacing: 0.05em;
-      text-transform: uppercase;
-      margin-bottom: 0.6em;
-    }
-    dd {
-      display: list-item;
-      list-style: disc;
-      color: $gym-orange;
-      line-height: 1.25;
-      margin-top: 0.4em;
-    }
-    dd span {
-      font-size: font-calc(16, rem, 10px);
-      color: #222;
-    }
     article {
       overflow: hidden;
     }
+
   }
 }
 
