--- a/_layouts/take5-raw.html
+++ b/_layouts/take5-raw.html
@@ -63,7 +63,7 @@
                 <!-- No resources found! -->
                 {% else %}
                 <details open class="take5--resources" id="tutorial-resources">
-                  <summary aria-expanded="true/false" tabindex="0" role="button">
+                  <summary class="gym-summary-link" aria-expanded="true/false" tabindex="0" role="button">
                     <b role="heading">Resources</b>
                   </summary>
                   <!-- Project Files -->
