--- a/_sass/components/_links_buttons.scss
+++ b/_sass/components/_links_buttons.scss
@@ -183,6 +183,31 @@ div.problem .action .save:not(:disabled) {
   width: auto;
 }
 
+//summary styled as link
+
+.gym-summary-link {
+  width: max-content;
+  cursor: pointer;
+
+  &:focus {
+    outline: none;
+  }
+
+  &:hover b,
+  &:focus b,
+  &:active b {
+    border-bottom: 2px solid $gym-black;
+  }
+
+  b {
+    font-weight: normal;
+    font-family: sans-serif;
+    vertical-align: -.05em;
+    padding-bottom: 2px;
+    border-bottom: 1px solid $gym-black;
+    margin-bottom: -2px;
+  }
+}
 
 // TODO: Resolve specificity
 
