--- a/_sass/pages/_courses.scss
+++ b/_sass/pages/_courses.scss
@@ -29,17 +29,20 @@
 
   .about-courses {
     font-size: 16px;
-    margin-top: 1em;
+    margin-top: 1.2em;
 
-    @include summary-link
+    header {
+      font-size: 16px;
+    }
 
     h2 {
       font-size: 1.6em;
       margin-top: -0.4rem;
+      margin-bottom: 0;
     }
 
     .white-panel {
-      padding: 1.2em;
+      padding: 1.4em;
       margin-bottom: 0;
 
       &:before,
@@ -93,7 +96,7 @@
   @include breakpoint(medium, max) {
 
     .row > div:not(:first-child) {
-      margin-top: 1.2em;
+      margin-top: 1.4em;
     }
 
   }
@@ -146,7 +149,7 @@
   border-bottom: 1px solid $gym-gray-2;
 
   h1 {
-    font-size: font-calc(32, rem, 10px);
+    font-size: font-calc(28, rem, 10px);
   }
 
   h2 {
