--- a/_layouts/take5-raw.html
+++ b/_layouts/take5-raw.html
@@ -131,7 +131,7 @@
                 <div class="col-md-8">
                 <!-- Transcript -->
                 <details class="take5--resources" id="tutorial-transcript">
-                  <summary aria-expanded="true/false" tabindex="0" role="button">
+                  <summary class="gym-summary-link" aria-expanded="true/false" tabindex="0" role="button">
                     <b>Transcript</b>
                   </summary>
                   <article
