Update tutorial recommended content
- Add course topic subheading
- Update subheading styling

--- a/_includes/take5/recommended-content.html
+++ b/_includes/take5/recommended-content.html
@@ -101,7 +101,7 @@ Placeholder logic for limited design-related recommended content
                 </a>
               </div>
               <header>
-                <p class="subhead-topic all-caps" role="doc-subtitle">{{ tutorial1.topic }}</p>
+                <p class="subhead-topic all-caps">{{ tutorial1.topic }}</p>
                 <h3 class="all-caps">
                   <a href="{{ tutorial1.title | slugify | prepend: base_path  }}">{{ tutorial1.title }}</a>
                 </h3>
@@ -116,7 +116,7 @@ Placeholder logic for limited design-related recommended content
                 </a>
               </div>
               <header>
-                <p class="subhead-topic all-caps" role="doc-subtitle">{{ tutorial2.topic }}</p>
+                <p class="subhead-topic all-caps">{{ tutorial2.topic }}</p>
                 <h3 class="all-caps">
                   <a href="{{ tutorial2.title | slugify | prepend: base_path  }}">{{ tutorial2.title }}</a>
                 </h3>
@@ -131,7 +131,7 @@ Placeholder logic for limited design-related recommended content
                 </a>
               </div>
               <header>
-                <p class="subhead-topic all-caps" role="doc-subtitle">{{ tutorial3.topic }}</p>
+                <p class="subhead-topic all-caps">{{ tutorial3.topic }}</p>
                 <h3 class="all-caps">
                   <a href="{{ tutorial3.title | slugify | prepend: base_path  }}">{{ tutorial3.title }}</a>
                 </h3>
@@ -163,6 +163,7 @@ Placeholder logic for limited design-related recommended content
                 </a>
               </div>
               <header>
+                <p class="subhead-topic all-caps">{{ course1.topic }}</p>
                 <h3 class="all-caps">
                   <a href="{{ course1.url }}">{{ course1.title }}</a>
                 </h3>
@@ -177,6 +178,7 @@ Placeholder logic for limited design-related recommended content
                 </a>
               </div>
               <header>
+                <p class="subhead-topic all-caps">{{ course2.topic }}</p>
                 <h3 class="all-caps">
                   <a href="{{ course2.url }}">{{ course2.title }}</a>
                 </h3>
@@ -191,6 +193,7 @@ Placeholder logic for limited design-related recommended content
                 </a>
               </div>
               <header>
+                <p class="subhead-topic all-caps">{{ course3.topic }}</p>
                 <h3 class="all-caps">
                   <a href="{{ course3.url }}">{{ course3.title }}</a>
                 </h3>
