--- a/css/take5.scss
+++ b/css/take5.scss
@@ -337,8 +337,10 @@ main h3 {
       margin-top: .6em;
     }
 
+    .course .subhead-topic,
     .tutorial .subhead-topic {
       margin-top: 1.6rem;
+      margin-bottom: 1rem;
     }
 
     &-content {
