--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -191,6 +191,9 @@
       font-size: 1.4em;
       line-height: 1.15;
       letter-spacing: 0;
+    }
+
+    h3:not(.all-caps) {
       text-transform: none;
     }
 
@@ -203,17 +206,6 @@
   }
 
   #main {
-    // typographical details
-    .all-caps {
-      text-transform: uppercase;
-    }
-
-    .nowrap,
-    .no-wrap {
-      font: inherit;
-      color: inherit;
-    }
-
     // secondary button
     .gym-button-secondary {
       color: $gym-white;
