--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -123,9 +123,7 @@ JS or tracking pixels to be included at the bottom of the theme
 <iframe id="geolocator" src="{{ geolocator_src }}" frameborder="0" style="width:1px;height:1px;visibility:hidden;display:none;"></iframe>
 {%- endcomment -%}
 
-{%- comment -%} 
-Note: this is our main JS, but we've attached the requisite cookiebanner ID & attributes to it to ensure it initializes properly, since it's now part of the main.js
-{%- endcomment -%}
-<script id="cookiebanner" async defer src="{{site.url}}/js/main.js?{{ site.time | date:'%s' }}" data-link="#f89820" data-message="We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. Find out more about how we use cookies in our" data-linkmsg="Privacy Policy." data-moreinfo="/privacy-policy"></script>
+<script id="mainjs" async defer src="{{site.url}}/js/main.js?{{ site.time | date:'%s' }}"></script>
+<script id="cookiebanner" async src="{{site.url}}/js/cookiebanner.js?{{ site.time | date:'%s' }}" data-link="#f89820" data-message="We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. Find out more about how we use cookies in our" data-linkmsg="Privacy Policy." data-moreinfo="/privacy-policy"></script>
 
 
