--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <title>{{ page.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- TODO: if we want to style our default layout, we can create a separate meta-tests partial {%- include partials/meta.html -%} -->
+    {%- comment -%}
+      TODO: if we want to style our default layout, we can create a separate meta-tests partial -->
+    {%- include partials/meta.html -%}
+    {%- endcomment -%}
     <style></style>
   </head>
   <body>
