Update catalog name
- Remove "gym-" prefix

--- a/css/main.scss
+++ b/css/main.scss
@@ -887,8 +887,8 @@ https://github.com/gymnasium/tracker/issues/143
 
 /* update font-family for catalog navigation */
 
-// #gym-catalog .course-menu a:focus,
-// #gym-catalog .course-menu a:active {
+// #catalog .course-menu a:focus,
+// #catalog .course-menu a:active {
 //   font-family: $gym-font-stack;
 // }
 
