--- a/_sass/components/_typography.scss
+++ b/_sass/components/_typography.scss
@@ -1,133 +1,1 @@
-@mixin font-open-sans {
-  @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700");
-}
-
-@mixin font-brandon {
-  @font-face {
-    font-family: brandon-grotesque;
-    src: url("https://thegymcms.com/fonts/brandon_reg-webfont.woff2")
-        format("woff2"),
-      url("https://thegymcms.com/fonts/brandon_reg-webfont.woff") format("woff");
-    font-style: normal;
-    font-weight: normal;
-  }
-  @font-face {
-    font-family: brandon-grotesque;
-    src: url("https://thegymcms.com/fonts/brandon_reg_it-webfont.woff2")
-        format("woff2"),
-      url("https://thegymcms.com/fonts/brandon_reg_it-webfont.woff")
-        format("woff");
-    font-style: italic;
-    font-weight: normal;
-  }
-  @font-face {
-    font-family: brandon-grotesque;
-    src: url("https://thegymcms.com/fonts/brandon_bld-webfont.woff2")
-        format("woff2"),
-      url("https://thegymcms.com/fonts/brandon_bld-webfont.woff") format("woff");
-    font-style: normal;
-    font-weight: bold;
-  }
-  @font-face {
-    font-family: brandon-grotesque;
-    src: url("https://thegymcms.com/fonts/brandon_bld_it-webfont.woff2")
-        format("woff2"),
-      url("https://thegymcms.com/fonts/brandon_bld_it-webfont.woff")
-        format("woff");
-    font-style: italic;
-    font-weight: bold;
-  }
-  @font-face {
-    font-family: brandon-grotesque;
-    src: url("https://thegymcms.com/fonts/brandon_blk-webfont.woff2")
-        format("woff2"),
-      url("https://thegymcms.com/fonts/brandon_blk-webfont.woff") format("woff");
-    font-style: normal;
-    font-weight: 900;
-  }
-  @font-face {
-    font-family: brandon-grotesque;
-    src: url("https://thegymcms.com/fonts/brandon_blk_it-webfont.woff2")
-        format("woff2"),
-      url("https://thegymcms.com/fonts/brandon_blk_it-webfont.woff")
-        format("woff");
-    font-style: italic;
-    font-weight: 900;
-  }
-  @font-face {
-    font-family: brandon-grotesque;
-    src: url("https://thegymcms.com/fonts/brandon_reg-webfont.woff2")
-        format("woff2"),
-      url("https://thegymcms.com/fonts/brandon_reg-webfont.woff") format("woff");
-    font-style: normal;
-    font-weight: normal;
-  }
-  @font-face {
-    font-family: brandon-grotesque;
-    src: url("https://thegymcms.com/fonts/brandon_reg_it-webfont.woff2")
-        format("woff2"),
-      url("https://thegymcms.com/fonts/brandon_reg_it-webfont.woff")
-        format("woff");
-    font-style: italic;
-    font-weight: normal;
-  }
-  @font-face {
-    font-family: brandon-grotesque;
-    src: url("https://thegymcms.com/fonts/brandon_bld-webfont.woff2")
-        format("woff2"),
-      url("https://thegymcms.com/fonts/brandon_bld-webfont.woff") format("woff");
-    font-style: normal;
-    font-weight: bold;
-  }
-  @font-face {
-    font-family: brandon-grotesque;
-    src: url("https://thegymcms.com/fonts/brandon_bld_it-webfont.woff2")
-        format("woff2"),
-      url("https://thegymcms.com/fonts/brandon_bld_it-webfont.woff")
-        format("woff");
-    font-style: italic;
-    font-weight: bold;
-  }
-  @font-face {
-    font-family: brandon-grotesque;
-    src: url("https://thegymcms.com/fonts/brandon_blk-webfont.woff2")
-        format("woff2"),
-      url("https://thegymcms.com/fonts/brandon_blk-webfont.woff") format("woff");
-    font-style: normal;
-    font-weight: 900;
-  }
-  @font-face {
-    font-family: brandon-grotesque;
-    src: url("https://thegymcms.com/fonts/brandon_blk_it-webfont.woff2")
-        format("woff2"),
-      url("https://thegymcms.com/fonts/brandon_blk_it-webfont.woff")
-        format("woff");
-    font-style: italic;
-    font-weight: 900;
-  }
-}
-
-@mixin font-awesome {
-  /*
-  *  Font Awesome 4.6.3 by @davegandy - http://fontawesome.io - @fontawesome
-  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
-  */
-  @font-face {
-    font-family: "FontAwesome";
-    src: url("https://deploy-preview-772--thegymcms.netlify.app/fonts/fontawesome-webfont.eot?v=4.6.3");
-    src: url("https://deploy-preview-772--thegymcms.netlify.app/fonts/fontawesome-webfont.eot?#iefix&v=4.6.3")
-        format("embedded-opentype"),
-      url("https://deploy-preview-772--thegymcms.netlify.app/fonts/fontawesome-webfont.woff2?v=4.6.3")
-        format("woff2"),
-      url("https://deploy-preview-772--thegymcms.netlify.app/fonts/fontawesome-webfont.woff?v=4.6.3")
-        format("woff"),
-      url("https://deploy-preview-772--thegymcms.netlify.app/fonts/fontawesome-webfont.ttf?v=4.6.3")
-        format("truetype"),
-      url("https://deploy-preview-772--thegymcms.netlify.app/fonts/fontawesome-webfont.svg?v=4.6.3#fontawesomeregular")
-        format("svg");
-    font-weight: normal;
-    font-style: normal;
-  }
-}
-
-
+// TODO: add typographical stuff here
