enable main site JS for local

--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -19,25 +19,12 @@
       href="{{site.gymurl}}/static/gymnasium/images/favicon.ico"
     />
 
-    <!-- <link
-      href="{{site.gymurl}}/static/gymnasium/css/lms-style-vendor.css"
-      rel="stylesheet"
-      type="text/css"
-    /> -->
-
-    <!-- <link
-      href="{{site.gymurl}}/static/gymnasium/css/lms-main-v1.css"
-      rel="stylesheet"
-      type="text/css"
-    /> -->
-
-    <!-- <script
+    <!-- We need to keep this JS intact for now to prevent console errors on localhost -->
+    <script
       type="text/javascript"
       src="{{site.gymurl}}/static/js/lms-main_vendor.js"
       charset="utf-8"
-    ></script> -->
-
-    <!-- TESTING! -->
+    ></script>
 
     {%- comment -%}Include meta components for DRYness{%- endcomment -%}
     {%- include /partials/meta.html -%}
