--- a/_includes/partials/meta/tags.html
+++ b/_includes/partials/meta/tags.html
@@ -16,6 +16,11 @@
 <meta name="twitter:description" property="og:description" content="{{ og_description }}">
 <meta name="twitter:image" property="og:image" content="{{ og_art }}">
 <meta name="twitter:image:alt" content="{{ og_img_alt }}">
+
+<link rel="alternate icon" href="{{ site.url }}/favicon/favicon.ico" sizes="any">
+<link rel="icon" href="{{ site.url }}/favicon/favicon.svg">
+
+{%comment%} TODO: this block is probably useless for us
 <link rel="apple-touch-icon" sizes="57x57" href="{{ site.url }}/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="{{ site.url }}/favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="{{ site.url }}/favicon/apple-icon-72x72.png">
@@ -33,6 +38,8 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="{{ site.url }}/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
+{%endcomment%}
+
 {% if page.robots -%}
   <meta name="robots" content="{{page.robots}}">
 {%- endif %}
