Remove crossorigin attr
https://github.com/gymnasium/tracker/issues/286

--- a/_includes/partials/meta/tags.html
+++ b/_includes/partials/meta/tags.html
@@ -46,7 +46,7 @@ https://stackoverflow.com/questions/50824181/preloading-google-fonts
 <!-- <link rel="preload" fetchpriority="high" href="{{ site.url }}/css/fonts/brandon-grotesque.css?{{ site.time | date:'%s' }}" as="style" crossorigin="anonymous">
 <link rel="preload" fetchpriority="high" href="{{ site.url }}/css/fonts/font-awesome.css?{{ site.time | date:'%s' }}" as="style" crossorigin="anonymous"> -->
 
-<link rel="preload" fetchpriority="high" href="{{ site.url }}/css/main.css?{{ site.time | date:'%s' }}" as="style" crossorigin="anonymous">
+<link rel="preload" fetchpriority="high" href="{{ site.url }}/css/main.css?{{ site.time | date:'%s' }}" as="style">
 
 <!-- <link rel="preload" href="{{ site.url }}/fonts/brandon_reg-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 <link rel="preload" href="{{ site.url }}/fonts/brandon_bld-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
