--- a/_includes/partials/meta/tags.html
+++ b/_includes/partials/meta/tags.html
@@ -20,7 +20,7 @@
 <link rel="alternate icon" href="{{ site.url }}/favicon/favicon.ico" sizes="any">
 <link rel="icon" href="{{ site.url }}/favicon/favicon.svg">
 
-{%comment%} TODO: this block is probably useless for us
+{% comment %} TODO: this block is probably useless for us
 <link rel="apple-touch-icon" sizes="57x57" href="{{ site.url }}/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="{{ site.url }}/favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="{{ site.url }}/favicon/apple-icon-72x72.png">
@@ -38,7 +38,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="{{ site.url }}/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
-{%endcomment%}
+{% endcomment %}
 
 {% if page.robots -%}
   <meta name="robots" content="{{page.robots}}">
@@ -58,7 +58,7 @@ https://stackoverflow.com/questions/50824181/preloading-google-fonts
 <link rel="preload" href="{{ site.url }}/fonts/brandon_reg-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 <link rel="preload" href="{{ site.url }}/fonts/brandon_bld-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 <link rel="preload" href="{{ site.url }}/fonts/brandon_blk-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-{%- comment -%}
+{%- endcomment -%}
 
 <link rel="stylesheet" href="{{ site.url }}/css/fonts/brandon-grotesque.css?{{ site.time | date:'%s' }}">
 <link rel="stylesheet" href="{{ site.url }}/css/fonts/font-awesome.css?{{ site.time | date:'%s' }}">
