--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -1,233 +1,233 @@
-#primary-nav {
-  height: auto;
+// #primary-nav {
+//   height: auto;
 
-  .gym-nav-icon-container:hover {
-    background-color: transparent;
-  }
+//   .gym-nav-icon-container:hover {
+//     background-color: transparent;
+//   }
 
-  .navbar {
-    height: auto;
-    border: 0;
-    margin: 0;
-  }
+//   .navbar {
+//     height: auto;
+//     border: 0;
+//     margin: 0;
+//   }
 
-  .navbar-nav > li > a {
-    padding: 10px;
-    margin-left: 4px;
-    margin-top: 2px;
-  }
+//   .navbar-nav > li > a {
+//     padding: 10px;
+//     margin-left: 4px;
+//     margin-top: 2px;
+//   }
 
-  .nav li a {
-    background-color: transparent;
-    color: $gym-orange;
+//   .nav li a {
+//     background-color: transparent;
+//     color: $gym-orange;
 
-    .caret {
-      color: $gym-orange;
-    }
-  }
+//     .caret {
+//       color: $gym-orange;
+//     }
+//   }
 
-  .nav li a:hover {
-    //odd specificity to overwrite bootstrap defaults
-    background-color: transparent;
-    color: $gym-white;
-    border-bottom: none;
+//   .nav li a:hover {
+//     //odd specificity to overwrite bootstrap defaults
+//     background-color: transparent;
+//     color: $gym-white;
+//     border-bottom: none;
 
-    .caret {
-      color: $gym-white;
-    }
-  }
+//     .caret {
+//       color: $gym-white;
+//     }
+//   }
 
-  .nav li.dropdown.open {
-    background-color: $gym-white;
-    a {
-      color: $gym-orange;
-    }
-    a:hover .caret {
-      color: $gym-orange;
-    }
+//   .nav li.dropdown.open {
+//     background-color: $gym-white;
+//     a {
+//       color: $gym-orange;
+//     }
+//     a:hover .caret {
+//       color: $gym-orange;
+//     }
 
-    .dropdown-menu {
-      border: none;
-      a:hover {
-        color: $gym-black;
-      }
-    }
+//     .dropdown-menu {
+//       border: none;
+//       a:hover {
+//         color: $gym-black;
+//       }
+//     }
 
-    .logged-in-username {
-      color: $gym-orange;
-    }
-  }
+//     .logged-in-username {
+//       color: $gym-orange;
+//     }
+//   }
 
-  .navbar-right {
-    li > a {
-      font: normal 1.2em/1 $gym-font-stack;
-    }
-  }
+//   .navbar-right {
+//     li > a {
+//       font: normal 1.2em/1 $gym-font-stack;
+//     }
+//   }
 
-  #dropdown {
-    display: inline-block;
-    color: $gym-orange;
-    border: none;
-  }
+//   #dropdown {
+//     display: inline-block;
+//     color: $gym-orange;
+//     border: none;
+//   }
 
-  #dropdown:hover,
-  #dropdown:hover span,
-  #dropdown:hover span.caret {
-    color: $gym-orange;
-  }
+//   #dropdown:hover,
+//   #dropdown:hover span,
+//   #dropdown:hover span.caret {
+//     color: $gym-orange;
+//   }
 
-  #dropdown:hover #dropdown:link:hover {
-    color: $gym-orange;
-    border: none;
-  }
+//   #dropdown:hover #dropdown:link:hover {
+//     color: $gym-orange;
+//     border: none;
+//   }
 
-  #dropdown-menu {
-    display: none;
-    list-style-type: none;
-    padding-inline-start: 0;
+//   #dropdown-menu {
+//     display: none;
+//     list-style-type: none;
+//     padding-inline-start: 0;
 
-    li {
-      display: inline;
+//     li {
+//       display: inline;
 
-      a {
-        color: $gym-white;
-      }
+//       a {
+//         color: $gym-white;
+//       }
 
-      a:hover,
-      anchor:link:hover {
-        color: $gym-orange;
-        text-decoration: none;
-      }
-    }
-  }
+//       a:hover,
+//       anchor:link:hover {
+//         color: $gym-orange;
+//         text-decoration: none;
+//       }
+//     }
+//   }
 
-  #dropdown-menu::before {
-    display: inline-block;
-    width: 0;
-    height: 0;
-    content: " ";
-    line-height: 0;
-    background: #000;
-    padding: 0 0.2em;
-    vertical-align: middle;
-    border-top: 0.25em dashed transparent;
-    border-left: 0.25em solid $gym-orange;
-    border-bottom: 0.25em dashed transparent;
-    margin-left: -0.8em;
-  }
-}
+//   #dropdown-menu::before {
+//     display: inline-block;
+//     width: 0;
+//     height: 0;
+//     content: " ";
+//     line-height: 0;
+//     background: #000;
+//     padding: 0 0.2em;
+//     vertical-align: middle;
+//     border-top: 0.25em dashed transparent;
+//     border-left: 0.25em solid $gym-orange;
+//     border-bottom: 0.25em dashed transparent;
+//     margin-left: -0.8em;
+//   }
+// }
 
-#secondary-nav {
-  height: 70px;
-  background-color: $gym-black;
-  position: relative;
-  z-index: 999;
+// #secondary-nav {
+//   height: 70px;
+//   background-color: $gym-black;
+//   position: relative;
+//   z-index: 999;
 
-  > .container {
-    padding-top: 10px;
-  }
+//   > .container {
+//     padding-top: 10px;
+//   }
 
-  a {
-    font-size: 1.2em;
-    color: $gym-white;
-    font-family: $gym-font-stack;
+//   a {
+//     font-size: 1.2em;
+//     color: $gym-white;
+//     font-family: $gym-font-stack;
 
-    &.gym-button {
-      color: $gym-white;
-    }
-  }
+//     &.gym-button {
+//       color: $gym-white;
+//     }
+//   }
 
-  a:hover {
-    color: $gym-orange;
-    border-bottom: none;
-  }
+//   a:hover {
+//     color: $gym-orange;
+//     border-bottom: none;
+//   }
 
-  .navbar-brand {
-    height: auto;
-    padding: 0;
-    margin-top: 1.75rem;
-    margin-left: 15px;
-  }
+//   .navbar-brand {
+//     height: auto;
+//     padding: 0;
+//     margin-top: 1.75rem;
+//     margin-left: 15px;
+//   }
 
-  .navbar-brand:hover,
-  .navbar-brand:active,
-  .navbar-brand:link {
-    background: transparent;
-  }
+//   .navbar-brand:hover,
+//   .navbar-brand:active,
+//   .navbar-brand:link {
+//     background: transparent;
+//   }
 
-  .navbar-default {
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 5px;
-    background-color: $gym-black;
-    border-color: transparent;
-    border: none;
-    margin-bottom: 0;
-    z-index: 100;
-  }
+//   .navbar-default {
+//     padding-left: 0;
+//     padding-right: 0;
+//     padding-top: 5px;
+//     background-color: $gym-black;
+//     border-color: transparent;
+//     border: none;
+//     margin-bottom: 0;
+//     z-index: 100;
+//   }
 
-  .navbar-right {
-    position: relative;
-    // top: 6px;
-  }
+//   .navbar-right {
+//     position: relative;
+//     // top: 6px;
+//   }
 
-  .navbar-toggle {
-    margin-top: 15px;
+//   .navbar-toggle {
+//     margin-top: 15px;
 
-    &:hover,
-    &:focus {
-      border: 1px solid $gym-white;
-    }
-  }
-}
+//     &:hover,
+//     &:focus {
+//       border: 1px solid $gym-white;
+//     }
+//   }
+// }
 
-@include breakpoint(small, max) {
-  .navbar-default {
-    .navbar-collapse,
-    .navbar-form {
-      margin: 9px auto 10px;
-    }
-  }
+// @include breakpoint(small, max) {
+//   .navbar-default {
+//     .navbar-collapse,
+//     .navbar-form {
+//       margin: 9px auto 10px;
+//     }
+//   }
 
-  #primary-nav .navbar-nav {
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-}
+//   #primary-nav .navbar-nav {
+//     margin-left: 15px;
+//     margin-right: 15px;
+//   }
+// }
 
-@include breakpoint(medium, min) {
-  .navbar-collapse.collapse {
-    padding-left: 0;
-    padding-right: 0;
-  }
+// @include breakpoint(medium, min) {
+//   .navbar-collapse.collapse {
+//     padding-left: 0;
+//     padding-right: 0;
+//   }
 
-  #secondary-nav {
-    .navbar-right {
-      margin-top: 3px;
-    }
-  }
+//   #secondary-nav {
+//     .navbar-right {
+//       margin-top: 3px;
+//     }
+//   }
 
-  #primary-nav,
-  #secondary-nav {
-    .row {
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .navbar {
-      border-radius: 0;
-      margin: 0;
+//   #primary-nav,
+//   #secondary-nav {
+//     .row {
+//       margin-left: auto;
+//       margin-right: auto;
+//     }
+//     .navbar {
+//       border-radius: 0;
+//       margin: 0;
 
-      &.collapse {
-        padding-left: 0;
-        padding-right: 0;
-      }
-    }
-    .navbar-left {
-      margin-left: 15px;
-    }
+//       &.collapse {
+//         padding-left: 0;
+//         padding-right: 0;
+//       }
+//     }
+//     .navbar-left {
+//       margin-left: 15px;
+//     }
 
-    .navbar-right {
-      margin-right: 15px;
-    }
-  }
-}
+//     .navbar-right {
+//       margin-right: 15px;
+//     }
+//   }
+// }
