comment out unused css

--- a/css/main.scss
+++ b/css/main.scss
@@ -400,11 +400,11 @@ section {
   padding: 0;
 }
 
-.black-background {
-  top: 0;
-  background-color: black;
-  z-index: 0;
-}
+// .black-background {
+//   top: 0;
+//   background-color: black;
+//   z-index: 0;
+// }
 
 .gym-top-block {
   z-index: 1;
