--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -45,129 +45,57 @@
       >
       <aside id="system-status" class="system-status hide"></aside>
 
-      <header class="global" aria-label="Global Navigation">
-        <nav id="primary-nav" class="black-background container-fluid">
-          <div class="container">
-            <div class="row">
-              <div class="navbar">
-                <div class="nav navbar navbar-nav navbar-left"></div>
-                <div class="collapse navbar-collapse">
-                  <ul class="nav navbar-nav navbar-right">
-                    <li>
-                      <a href="#" id="dropdown" class="logged-in-username">
-                        rediris <span class="caret"></span>
-                      </a>
-                      <ul class="" id="dropdown-menu">
-                        <li><a href="/logout" role="menuitem">Log Out</a></li>
-                      </ul>
-                    </li>
+      <header class="site-header" aria-label="Site Header">
 
-                    <li>
-                      <a
-                        href="https://aquent.com"
-                        target="_blank"
-                        title="Aquent"
-                        class="gym-nav-icon-container"
-                      >
-                        <i class="gym-nav-icon aquent-icon"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://vitamintalent.com"
-                        target="_blank"
-                        title="Vitamin T"
-                        class="gym-nav-icon-container"
-                      >
-                        <i class="gym-nav-icon vitamin-t-icon"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
+        <nav id="main-nav" aria-label="Main Navigation">
+          <div class="container">
+      
+            <a class="navbar-brand" href="/">
+              
+        <img class="gymnasium-logo" src="https://dev.thegymcms.com/img/brand/png/gymnasium-logo-white-4x.png" srcset="https://dev.thegymcms.com/img/brand/svg/gymnasium-logo-white.svg" width="200" height="23" alt="Aquent Gymnasium home page">
+      
+            </a>
+      
+            <ul>
+              <li><a href="/courses">Courses</a></li>
+              <li><a href="/jobs">Jobs</a></li>
+              <li><a href="/about">About</a></li>
+      
+                <li>
+                        <a class="gym-button" href="/login?next=%2F"><b>Log In/Sign Up</b></a>
+                </li>
+            </ul>
+      
+            <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#secondary-nav-items">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button> -->
           </div>
         </nav>
-
-        <nav id="secondary-nav" class="container-fluid">
+      
+        <nav id="utility-nav" class="utility-nav" aria-label="Affiliated Brands Navigation">
           <div class="container">
-            <div class="row">
-              <div class="navbar navbar-default">
-                <div class="navbar-header">
-                  <button
-                    type="button"
-                    class="navbar-toggle collapsed"
-                    data-toggle="collapse"
-                    data-target="#secondary-nav-items"
-                  >
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
-                  <a class="navbar-brand" href="{{homelink}}">
-                    <img
-                      class="gymnasium-logo"
-                      src="{{site.url}}/img/brand/png/gymnasium-logo-white-4x.png"
-                      srcset="{{site.url}}/img/brand/svg/gymnasium-logo-white.svg"
-                      width="200"
-                      height="23"
-                      alt="Aquent Gymnasium home page"
-                    />
-                  </a>
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="secondary-nav-items">
-                  <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/courses">Courses</a></li>
-                    <li><a href="/jobs">Jobs</a></li>
-                    <li><a href="/about">About</a></li>
-
-                    <li class="nav-global-01">
-                      <a href="/dashboard">Dashboard</a>
-                    </li>
-                    <li class="visible-xs">
-                      <a href="/logout">Log out</a>
-                    </li>
-                  </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-              </div>
-            </div>
+            <ul>
+              <li><a href="https://aquent.com" rel="noopener" target="_blank" title="Aquent" class="gym-nav-icon-container"> <i class="gym-nav-icon aquent-icon"></i></a></li>
+              <li><a href="https://vitamintalent.com" rel="noopener" target="_blank" title="Vitamin T" class="gym-nav-icon-container"> <i class="gym-nav-icon vitamin-t-icon"></i></a></li>
+            </ul>
           </div>
         </nav>
-
-        <div
-          class="wrapper-msg urgency-high"
-          id="browserWarning"
-          style="display: none"
-        >
-          <div class="msg">
-            <div class="msg-content">
-              <h1>Improve your Gymnasium experience</h1>
-              <div class="copy">
-                <p>
-                  It looks like you’re using an unsupported browser. To get the
-                  most out of your Gymnasium experience, we recommend that you
-                  use
-                  <a
-                    href="https://www.google.com/chrome/index.html"
-                    target="_blank"
-                    >Chrome</a
-                  >,
-                  <a
-                    href="https://www.mozilla.org/en-US/firefox/new/"
-                    target="_blank"
-                    >Firefox</a
-                  >, or
-                  <a href="http://www.apple.com/safari/" target="_blank"
-                    >Safari</a
-                  >.
-                </p>
-              </div>
+      
+        <div class="wrapper-msg urgency-high" id="browserWarning" style="display:none;">
+            <div class="msg">
+                <div class="msg-content">
+                    <h1>Improve your Gymnasium experience</h1>
+                    <div class="copy">
+                        <p>It looks like you’re using an unsupported browser. To get the most out of your Gymnasium experience, we recommend that you use
+                          <a href="https://www.google.com/chrome/index.html" target="_blank" rel="noopener">Chrome</a>,
+                          <a href="https://www.mozilla.org/en-US/firefox/new/" target="_blank" rel="noopener">Firefox</a>, or
+                          <a href="https://www.apple.com/safari/" target="_blank" rel="noopener">Safari</a>.</p>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
       </header>
 
