--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -40,20 +40,16 @@
 
   <body class="ltr gymnasium-home lang_en">
     <div id="page-prompt"></div>
-      <a class="nav-skip sr-only sr-only-focusable" href="#main"
-        >Skip to main content</a
-      >
+      <a class="nav-skip sr-only sr-only-focusable" href="#main">Skip to main content</a>
       <aside id="system-status" class="system-status hide"></aside>
 
       <header class="site-header" aria-label="Site Header">
 
-        <nav id="main-nav" aria-label="Main Navigation">
+        <nav id="main-nav" class="main-nav" aria-label="Main Navigation">
           <div class="container">
       
             <a class="navbar-brand" href="/">
-              
-        <img class="gymnasium-logo" src="https://dev.thegymcms.com/img/brand/png/gymnasium-logo-white-4x.png" srcset="https://dev.thegymcms.com/img/brand/svg/gymnasium-logo-white.svg" width="200" height="23" alt="Aquent Gymnasium home page">
-      
+              <img class="gymnasium-logo" src="https://dev.thegymcms.com/img/brand/png/gymnasium-logo-white-4x.png" srcset="https://dev.thegymcms.com/img/brand/svg/gymnasium-logo-white.svg" width="200" height="23" alt="Aquent Gymnasium home page">
             </a>
       
             <ul>
