--- a/_sass/bootstrap.scss
+++ b/_sass/bootstrap.scss
@@ -848,7 +848,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 
-@import "components/bootstrap/navigation";
+// @import "components/bootstrap/navigation";
 
 .breadcrumb {
   padding: 8px 15px;
