--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -14,46 +14,69 @@
 }
 
 .main-nav {
-  padding: 1rem 0;
-
-
+  padding: 1rem 0 0;
 
   ul {
     a:not(.gym-button) {
       font-family: $gym-font-stack;
       font-size: 1.2em;
       color: $gym-white;
-      padding: 1.5rem 0;
+      padding: 1.5rem;
       display: block;
+
+      &:hover {
+        transition: all 250ms ease;
+      }
     }
   }
 
   @include breakpoint(medium, max) {
     .navbar-brand {
-      padding: 1rem 0 2rem;
-      display: block;
+      padding: 1rem 0;
+      display: inline-block;
     }
 
     // This is the line below the logo on mobile screens
     ul {
+      margin-top: 1rem;
       position: relative;
   
       &::before {
         content: '';
         position: absolute;
+        top: 0;
         left: -1.5rem;
         width: calc(100% + 3rem);
         border-top: 1px solid $gym-white;
+        z-index: 1;
+      }
+
+      a {
+        &.gym-button {
+          border-radius: 0;
+        }
+
+        &:not(.gym-button) {
+          border-bottom: 1px solid $gym-white;
+
+          &:hover {
+            background-color: rgba($gym-dark-gray-2, 0.75);
+          }
+        }
       }
     }
 
+    li {
+      position: relative;
+      left: -15px;
+      width: calc(100% + 3rem);
+    }
   }
 
-
-
   @include breakpoint(medium, min) {
+    padding: 1rem 0;
     display: flex;
-    order: 2;
+    order: 3;
     height: 7rem;
 
     .container {
@@ -76,7 +99,10 @@
       justify-content: flex-end;
 
       a:not(.gym-button) {
-        padding: 1.5rem;
+      
+        &:hover {
+          color: $gym-orange;
+        }
       }
     }
 
@@ -95,12 +121,13 @@
   }
 
   a {
-    padding: 1rem;
+    padding: 1rem 0;
+    margin-left: 1rem;
   }
 
   @include breakpoint(medium, min) {
     display: flex;
-    order: 1;
+    order: 2;
     padding: 1rem 0;
 
     .container {
@@ -108,10 +135,6 @@
       align-items: center;
       width: 100%;
       justify-content: flex-end;
-    }
-
-    ul {
-      
     }
   }
 }
