--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -48,7 +48,7 @@
         <nav id="main-nav" class="main-nav" aria-label="Main Navigation">
           <div class="container">
       
-            <a class="navbar-brand" href="/">
+            <a class="site-logo" href="/">
               <img class="gymnasium-logo" src="https://dev.thegymcms.com/img/brand/png/gymnasium-logo-white-4x.png" srcset="https://dev.thegymcms.com/img/brand/svg/gymnasium-logo-white.svg" width="200" height="23" alt="Aquent Gymnasium home page">
             </a>
       
@@ -58,16 +58,9 @@
               <li><a href="/about">About</a></li>
       
                 <li>
-                        <a class="gym-button" href="/login?next=%2F"><b>Log In/Sign Up</b></a>
+                  <a class="gym-button" href="/login?next=%2F">Log In/Sign Up</a>
                 </li>
             </ul>
-      
-            <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#secondary-nav-items">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button> -->
           </div>
         </nav>
       
