--- a/css/main.scss
+++ b/css/main.scss
@@ -262,8 +262,8 @@ white panel (used in multiple places)
       content: "";
       position: absolute;
       top: 0;
-      right: -5px;
-      width: 25%;
+      right: 25%;
+      width: 0;
       height: 100%;
       border-left: 1px dashed $gym-gray;
     }
